fix overflow

--- a/src/components/BlogContent/styles.scss
+++ b/src/components/BlogContent/styles.scss
@@ -39,6 +39,7 @@
     position: relative;
     width: 100%;
     border-radius: 18px;
+    z-index: -1;
 
     img {
       &.loaded {
@@ -66,30 +67,38 @@
   &__content h2 {
     margin-bottom: 1em;
   }
-}
 
-.edit-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-  padding: 2em;
-  border-radius: 18px;
-
-  &::after {
-    content: "";
-    position: absolute;
+  .edit-form {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    top: 0px;
-    left: 0px;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: -1;
-  }
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  &:not(.edit) {
-    .edit-form {
-      display: none;
+    &__overlay {
+      background-color: rgba(0, 0, 0, 0.5);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    &__content {
+      position: relative;
+      z-index: 1;
+      max-width: 728px;
+      width: calc(100% - 40px);
+      padding: 2em;
+      border-radius: 18px;
+      background-color: #fff;
+
+      &__container {
+        margin-top: 30px;
+      }
     }
   }
 }
