--- a/src/components/PostEditor/styles.scss
+++ b/src/components/PostEditor/styles.scss
@@ -2,5 +2,6 @@
     &__buttons{
         display: inline-block;
         width: 100%;
+        margin-top: 1em;
     }
 }
